[REMOVE ME] ignore go-ipfs-api test that ensures we do not use small RSA keys
Remove once we drop the change that allows infra to use of small RSA keys

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -246,7 +246,9 @@ jobs:
             - v1-go-api-{{ checksum "~/ipfs/go-ipfs/go-ipfs-api/go.sum" }}
             - v1-go-api-
       - run:
-          command: go test -v ./...
+          command: |
+             git checkout hack/remove-small-keysize-test
+             go test -v ./...
           working_directory: ~/ipfs/go-ipfs/go-ipfs-api
       - save_cache:
           key: v1-go-api-{{ checksum "~/ipfs/go-ipfs/go-ipfs-api/go.sum" }}
